force-app/main/default/objects/Contract_Unit__c/Contract_Unit__c.object-meta.xml
<CustomObject>
    <description>To register Contract Units</description>
    <label>Contract Eenheid</label>
    <nameField>
        <label>Contract Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Eenheden</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>