force-app/main/default/objects/Contract_Unit__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>To register the address</description>
    <inlineHelpText>To register the address</inlineHelpText>
    <label>Address</label>
    <type>Address</type>
</CustomField>