force-app/main/default/objects/Contract_Unit__c/fields/Contract_Unit_Address__c.field-meta.xml
<CustomField>
    <fullName>Contract_Unit_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Unit Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipName>Contract_Units</relationshipName>
    <type>Lookup</type>
</CustomField>