force-app/main/default/objects/Contract_Unit__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>To describe the Contract Unit</description>
    <inlineHelpText>To describe the Contract Unit</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>