force-app/main/default/objects/Contract_Unit__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>To register the External Id</description>
    <externalId>true</externalId>
    <inlineHelpText>To register the External Id</inlineHelpText>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>