force-app/main/default/objects/Contract_Unit__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>To register the sub-status of the Contract Unit</description>
    <inlineHelpText>To register the sub-status of the Contract Unit</inlineHelpText>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANT</fullName>
                <label>Rented anti-squat</label>
            </value>
            <value>
                <fullName>BOU</fullName>
                <label>Building plans</label>
            </value>
            <value>
                <fullName>BRU</fullName>
                <label>Loan</label>
            </value>
            <value>
                <fullName>EPA</fullName>
                <label>Awaiting Energy Performance Advice</label>
            </value>
            <value>
                <fullName>MUT</fullName>
                <label>Mutation</label>
            </value>
            <value>
                <fullName>NIB</fullName>
                <label>Waiting for new tenant - non-regular</label>
            </value>
            <value>
                <fullName>NIE</fullName>
                <label>New build</label>
            </value>
            <value>
                <fullName>NIH</fullName>
                <label>Awaiting new tenant - regular</label>
            </value>
            <value>
                <fullName>OPL</fullName>
                <label>Completion</label>
            </value>
            <value>
                <fullName>PER</fullName>
                <label>Rented out permanently</label>
            </value>
            <value>
                <fullName>PRO</fullName>
                <label>Project vacancy</label>
            </value>
            <value>
                <fullName>STR</fullName>
                <label>Structural vacancy</label>
            </value>
            <value>
                <fullName>TIJD</fullName>
                <label>Rented temporary</label>
            </value>
            <value>
                <fullName>VEK</fullName>
                <label>Sale</label>
            </value>
            <value>
                <fullName>VER</fullName>
                <label>Permit granted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>