force-app/main/default/objects/Contract_Unit__c/fields/Unit_Category__c.field-meta.xml
<CustomField>
    <fullName>Unit_Category__c</fullName>
    <description>To register the Unit Category of the Contract Unit: https://www.coraveraonline.nl/index.php/Referentiedata:EENHEIDSOORT</description>
    <inlineHelpText>To register the Unit Category of the Contract Unit</inlineHelpText>
    <label>Unit Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BED</fullName>
                <label>Business Area</label>
            </value>
            <value>
                <fullName>INT</fullName>
                <label>Intramural Care Property</label>
            </value>
            <value>
                <fullName>MOG</fullName>
                <label>Social Property</label>
            </value>
            <value>
                <fullName>OVE</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>PAR</fullName>
                <label>Parking</label>
            </value>
            <value>
                <fullName>REC</fullName>
                <label>Recreational</label>
            </value>
            <value>
                <fullName>WOO</fullName>
                <label>Residential</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>