force-app/main/default/objects/Contract_Unit__c/fields/Unit_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sub_Category__c</fullName>
    <description>To register the Sub Category of the Contract Unit: https://www.coraveraonline.nl/index.php/Referentiedata:EENHEIDDETAILSOORT</description>
    <inlineHelpText>To register the Sub Category of the Contract Unit</inlineHelpText>
    <label>Unit Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Unit_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANT</fullName>
                <label>Antenna setup site</label>
            </value>
            <value>
                <fullName>ATE</fullName>
                <label>Studio space</label>
            </value>
            <value>
                <fullName>BAS</fullName>
                <label>Elementary school</label>
            </value>
            <value>
                <fullName>BEN</fullName>
                <label>Downstairs apartment</label>
            </value>
            <value>
                <fullName>BER</fullName>
                <label>Storage</label>
            </value>
            <value>
                <fullName>BIB</fullName>
                <label>Library</label>
            </value>
            <value>
                <fullName>BIJ</fullName>
                <label>Meeting space</label>
            </value>
            <value>
                <fullName>BOU</fullName>
                <label>Building site</label>
            </value>
            <value>
                <fullName>BOV</fullName>
                <label>Upstairs apartment</label>
            </value>
            <value>
                <fullName>BRE</fullName>
                <label>Broad school</label>
            </value>
            <value>
                <fullName>BUU</fullName>
                <label>Community center</label>
            </value>
            <value>
                <fullName>CJG</fullName>
                <label>Youth and family center</label>
            </value>
            <value>
                <fullName>COR</fullName>
                <label>Corridor apartment</label>
            </value>
            <value>
                <fullName>CUL</fullName>
                <label>Culture room</label>
            </value>
            <value>
                <fullName>DAG</fullName>
                <label>Daytime space</label>
            </value>
            <value>
                <fullName>EIN</fullName>
                <label>End house</label>
            </value>
            <value>
                <fullName>EPK</fullName>
                <label>Leasehold plot</label>
            </value>
            <value>
                <fullName>FIE</fullName>
                <label>Bicycle parking space</label>
            </value>
            <value>
                <fullName>GAL</fullName>
                <label>Gallery flat</label>
            </value>
            <value>
                <fullName>GAR</fullName>
                <label>Garage</label>
            </value>
            <value>
                <fullName>GEM</fullName>
                <label>Public center</label>
            </value>
            <value>
                <fullName>GTW</fullName>
                <label>Semi-detached house</label>
            </value>
            <value>
                <fullName>GWO</fullName>
                <label>Terraced house</label>
            </value>
            <value>
                <fullName>HAL</fullName>
                <label>Detached house</label>
            </value>
            <value>
                <fullName>HER</fullName>
                <label>Townhouse</label>
            </value>
            <value>
                <fullName>HOE</fullName>
                <label>Corner house</label>
            </value>
            <value>
                <fullName>HOR</fullName>
                <label>Hospitality</label>
            </value>
            <value>
                <fullName>HOS</fullName>
                <label>Hospice</label>
            </value>
            <value>
                <fullName>JON</fullName>
                <label>Youth center</label>
            </value>
            <value>
                <fullName>KAM</fullName>
                <label>Room</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>