force-app/main/default/objects/Contract_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract_Unit_Address__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>External_Id__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Contract Eenheden</label>
</ListView>