force-app/main/default/objects/Contract_Unit__c/listViews/All_Contract_Units.listView-meta.xml
<ListView>
    <fullName>All_Contract_Units</fullName>
    <columns>NAME</columns>
    <columns>Unit_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Contract_Unit_Address__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contract Units</label>
</ListView>